# backend/swagger_server/models/__init__.py
@@ -4,6 +4,8 @@
 from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.coach import Coach
+from swagger_server.models.fixture import Fixture
 from swagger_server.models.player import Player
 from swagger_server.models.predicted_game import PredictedGame
 from swagger_server.models.team import Team
+from swagger_server.models.team_standing import TeamStanding
