# backend/swagger_server/models/team_standing.py
@@ -1,0 +1,244 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class TeamStanding(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, team_id: int=None, rank: int=None, team_name: str=None, team_logo: str=None, points: int=None, goals_diff: str=None, form: str=None, description: str=None):  # noqa: E501
+        """TeamStanding - a model defined in Swagger
+
+        :param team_id: The team_id of this TeamStanding.  # noqa: E501
+        :type team_id: int
+        :param rank: The rank of this TeamStanding.  # noqa: E501
+        :type rank: int
+        :param team_name: The team_name of this TeamStanding.  # noqa: E501
+        :type team_name: str
+        :param team_logo: The team_logo of this TeamStanding.  # noqa: E501
+        :type team_logo: str
+        :param points: The points of this TeamStanding.  # noqa: E501
+        :type points: int
+        :param goals_diff: The goals_diff of this TeamStanding.  # noqa: E501
+        :type goals_diff: str
+        :param form: The form of this TeamStanding.  # noqa: E501
+        :type form: str
+        :param description: The description of this TeamStanding.  # noqa: E501
+        :type description: str
+        """
+        self.swagger_types = {
+            'team_id': int,
+            'rank': int,
+            'team_name': str,
+            'team_logo': str,
+            'points': int,
+            'goals_diff': str,
+            'form': str,
+            'description': str
+        }
+
+        self.attribute_map = {
+            'team_id': 'team_id',
+            'rank': 'rank',
+            'team_name': 'team_name',
+            'team_logo': 'team_logo',
+            'points': 'points',
+            'goals_diff': 'goalsDiff',
+            'form': 'form',
+            'description': 'description'
+        }
+        self._team_id = team_id
+        self._rank = rank
+        self._team_name = team_name
+        self._team_logo = team_logo
+        self._points = points
+        self._goals_diff = goals_diff
+        self._form = form
+        self._description = description
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'TeamStanding':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The team_standing of this TeamStanding.  # noqa: E501
+        :rtype: TeamStanding
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def team_id(self) -> int:
+        """Gets the team_id of this TeamStanding.
+
+
+        :return: The team_id of this TeamStanding.
+        :rtype: int
+        """
+        return self._team_id
+
+    @team_id.setter
+    def team_id(self, team_id: int):
+        """Sets the team_id of this TeamStanding.
+
+
+        :param team_id: The team_id of this TeamStanding.
+        :type team_id: int
+        """
+
+        self._team_id = team_id
+
+    @property
+    def rank(self) -> int:
+        """Gets the rank of this TeamStanding.
+
+
+        :return: The rank of this TeamStanding.
+        :rtype: int
+        """
+        return self._rank
+
+    @rank.setter
+    def rank(self, rank: int):
+        """Sets the rank of this TeamStanding.
+
+
+        :param rank: The rank of this TeamStanding.
+        :type rank: int
+        """
+
+        self._rank = rank
+
+    @property
+    def team_name(self) -> str:
+        """Gets the team_name of this TeamStanding.
+
+
+        :return: The team_name of this TeamStanding.
+        :rtype: str
+        """
+        return self._team_name
+
+    @team_name.setter
+    def team_name(self, team_name: str):
+        """Sets the team_name of this TeamStanding.
+
+
+        :param team_name: The team_name of this TeamStanding.
+        :type team_name: str
+        """
+
+        self._team_name = team_name
+
+    @property
+    def team_logo(self) -> str:
+        """Gets the team_logo of this TeamStanding.
+
+
+        :return: The team_logo of this TeamStanding.
+        :rtype: str
+        """
+        return self._team_logo
+
+    @team_logo.setter
+    def team_logo(self, team_logo: str):
+        """Sets the team_logo of this TeamStanding.
+
+
+        :param team_logo: The team_logo of this TeamStanding.
+        :type team_logo: str
+        """
+
+        self._team_logo = team_logo
+
+    @property
+    def points(self) -> int:
+        """Gets the points of this TeamStanding.
+
+
+        :return: The points of this TeamStanding.
+        :rtype: int
+        """
+        return self._points
+
+    @points.setter
+    def points(self, points: int):
+        """Sets the points of this TeamStanding.
+
+
+        :param points: The points of this TeamStanding.
+        :type points: int
+        """
+
+        self._points = points
+
+    @property
+    def goals_diff(self) -> str:
+        """Gets the goals_diff of this TeamStanding.
+
+
+        :return: The goals_diff of this TeamStanding.
+        :rtype: str
+        """
+        return self._goals_diff
+
+    @goals_diff.setter
+    def goals_diff(self, goals_diff: str):
+        """Sets the goals_diff of this TeamStanding.
+
+
+        :param goals_diff: The goals_diff of this TeamStanding.
+        :type goals_diff: str
+        """
+
+        self._goals_diff = goals_diff
+
+    @property
+    def form(self) -> str:
+        """Gets the form of this TeamStanding.
+
+
+        :return: The form of this TeamStanding.
+        :rtype: str
+        """
+        return self._form
+
+    @form.setter
+    def form(self, form: str):
+        """Sets the form of this TeamStanding.
+
+
+        :param form: The form of this TeamStanding.
+        :type form: str
+        """
+
+        self._form = form
+
+    @property
+    def description(self) -> str:
+        """Gets the description of this TeamStanding.
+
+
+        :return: The description of this TeamStanding.
+        :rtype: str
+        """
+        return self._description
+
+    @description.setter
+    def description(self, description: str):
+        """Sets the description of this TeamStanding.
+
+
+        :param description: The description of this TeamStanding.
+        :type description: str
+        """
+
+        self._description = description
